--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@angular/ssr": "^20.2.1",
     "@tailwindcss/postcss": "^4.1.13",
     "boxicons": "^2.1.4",
+    "chart.js": "^4.3.0",
     "express": "^5.1.0",
+    "ng2-charts": "^8.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.13",
