--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-server": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@angular/ssr": "^20.2.1",
+    "@nestjs/jwt": "^11.0.1",
     "@tailwindcss/postcss": "^4.1.13",
     "boxicons": "^2.1.4",
     "chart.js": "^4.3.0",
