--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "finnancer",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "node server.csr.js",
+    "build": "ng build --configuration production",
+    "build:dev": "ng build",
+    "serve:csr": "node server.csr.js",
+    "preview": "npm run build && npm run serve:csr",
+    
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:Finnancer": "node dist/Finnancer/server/server.mjs"
   },
+
   "prettier": {
     "printWidth": 100,
     "singleQuote": true,
@@ -34,7 +40,7 @@
     "@tailwindcss/postcss": "^4.1.13",
     "boxicons": "^2.1.4",
     "chart.js": "^4.3.0",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "ng2-charts": "^8.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
